# InferenceEngine

./: .gitignore  .ocamlformat  .ocamlinit  README.md  ReturnStmtLocation.ml  cleanup_cs.sh  cleanup_ns.sh  config.json  dune-project  run-linux.sh  run.sh  skip_func.txt  switch_to_relational-linux.sh  switch_to_relational.sh  switch_to_sagan-linux.sh  switch_to_sagan.sh
demos/pics_with_a_slider/: .gitignore  README.md
lib/: .ocamlformat  .ocamlinit  Annotations.ml  AskingRules.ml  AutoTest.ml  Axioms.ml  CallGraph.ml  Chain.json  Chain.ml  ContextualFeatures.ml  DataFlowEdges.ml  Deserializer.ml  DirectoryManager.ml  DistManipulator.ml  FeatureExtractor.ml  FeatureMaps.ml  GetterSetter.ml  GraphMaker.ml  GraphRepr.ml  GraphSplitter.ml  GraphViz.ml  HybridFeatures.ml  InferenceResult.ml  InfixOperators.ml  JavaExpert.ml  ListMonad.ml  Loop.ml  Main.ml  MakeGraph.ml  ManualTest.ml  Memoize.ml  MetaRules.ml  Method.ml  MethodSelector.ml  Methods.txt  NodeWiseFeatures.ml  Notebook.ml  Notebook.org  Output.ml  PrettyPrinters.ml  (+23 more)
lib/python/: compute_apis_to_transfer.py  compute_contextual_similarity.py  compute_nodewise_similarity.py  compute_nodewise_similarity_apis.py  compute_nodewise_similarity_udfs.py  weakly.py  (+4 more)
resources/: Annotations.json.relational  Annotations.json.sagan  Callgraph.txt.relational  Callgraph.txt.sagan  GetterSetter.json.sagan  Methods.txt.sagan  skip_func.txt.sagan
scripts/: inplace_sort_strings.py  leave_only_unique_dots.hy  random_select.py  txt_to_ml.py
test/: InferenceEngineTests.ml  InferenceEngineTests.ml.old  config.json  dune
(+3 files in other folders)
