(env
 (dev
  (flags (:standard -g -short-paths -safe-string -strict-formats -strict-sequence -bin-annot -w -27-4-9-40-41-42-45-48-32-33-26))))

(test
 (name InferenceEngineTests)
 (flags (:standard -open Core -open InferenceEngineLib))
 (libraries utop core ocamlgraph yojson InferenceEngineLib parmap)
 (preprocess (pps ppx_compare)))
