(env
 (dev
  (flags (:standard -g -short-paths -safe-string -strict-formats -strict-sequence -bin-annot -warn-error -A))))

(test
 (name InferenceEngineTests)
 (flags (:standard -open Core -open InferenceEngineLib))
 (libraries utop core ocamlgraph yojson InferenceEngineLib re2)
 (preprocess (pps ppx_compare)))
